--- a/game_page.html
+++ b/game_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Guess The Word</title>
+	<title>The Math Quiz</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -25,15 +25,15 @@
 </span>
 <div class="container">
 	<center>
-		<h2 style="color: white;">Guess The Word!</h2>
+		<h2 style="color: white;">The Math Quiz</h2>
 <h3 id="player_question"></h3>
 <h3 id="player_answer"></h3>
 <div id="output" class="col-lg-6"></div>
 		<br>
 		<br>
 
-		<label>Send You Word: <b style="color: red">Try putting word which has 5 or more alphabet</b></label>
-<input type="text" id="word" class="form-control" placeholder="type your word">
+		<label>Send You Question: <b style="color: red">Try putting a hard math question</b></label>
+<input type="text" id="word" class="form-control" placeholder="type your equation">
 		<br>
 <button onclick="send()" class="btn btn-success" style="width: 30%; font-size: 15px; font-family: 'Courier New', Courier, monospace;">
 Send
